<resources>
    <string name="app_name">EventFinder</string>
    <string name="search_tab">SEARCH</string>
    <string name="favorites_tab">FAVORITES</string>
    <string name="search_form_keyword">Keyword*</string>
    <string name="search_form_category">Category*</string>
    <string name="search_form_location">Location*</string>
    <string name="search_form_distance">Distance(Miles)*</string>
    <string name="enter_the_keyword">Enter the Keyword</string>
    <string name="default_distance">10</string>
    <string name="search_form_auto_detect">Auto-Detect</string>
    <string name="enter_the_location">Enter the Location</string>
    <string name="search_button_txt">Search</string>
    <string name="clear_button_txt">Clear</string>


    <string-array name="category_array">
        <item>All</item>
        <item>Music</item>
        <item>Sports</item>
        <item>Arts &amp; Theatre</item>
        <item>Film</item>
        <item>Miscellaneous</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_to_search">Back to Search</string>
    <string name="no_events_found">No events found</string>
    <string name="back_button">back_button</string>
    <string name="artist_teams">Artist/Teams</string>
    <string name="venue">Venue</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="genres">Genres</string>
    <string name="price_range">Price Range</string>
    <string name="ticket_status">Ticket Status</string>
    <string name="buy_tickets_at">Buy Tickets At</string>
    <string name="artist_music_data_unavailable">Artist/Music data unavailable</string>
    <string name="check_out_on_spotify">Check out on Spotify</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="city_state">City/State</string>
    <string name="contact_info">Contact Info</string>
    <string name="open_hours">Open Hours</string>
    <string name="child_rules">Child Rules</string>
    <string name="general_rules">General Rules</string>
    <string name="no_more_information">No more Information</string>

</resources>